Added additional features
